RESOLVED FIXED65217
AudioContext is not correctly accounting for hardware resources
https://bugs.webkit.org/show_bug.cgi?id=65217
Summary AudioContext is not correctly accounting for hardware resources
Chris Rogers
Reported 2011-07-26 16:04:03 PDT
AudioContext is not correctly accounting for hardware resources
Attachments
Patch (3.19 KB, patch)
2011-07-26 16:13 PDT, Chris Rogers
kbr: review+
Chris Rogers
Comment 1 2011-07-26 16:13:52 PDT
Chris Rogers
Comment 2 2011-07-26 16:16:35 PDT
It turns out that the global ref-count is only decremented if the AudioContext::lazyInitialize() has been previously called. So we need to move the increment (and hardware initialization) properly into the lazyInitialize() method...
Kenneth Russell
Comment 3 2011-07-26 16:40:56 PDT
Comment on attachment 102071 [details] Patch Looks fine as long as it's been tested.
Chris Rogers
Comment 4 2011-07-26 17:15:48 PDT
Note You need to log in before you can comment on or make changes to this bug.