AudioContext is not correctly accounting for hardware resources https://bugs.webkit.org/show_bug.cgi?id=65217

Reviewed by Kenneth Russell.

No new tests since audio API is not yet implemented.

* webaudio/AudioContext.cpp:
(WebCore::AudioContext::create):
(WebCore::AudioContext::AudioContext):
(WebCore::AudioContext::lazyInitialize):


Canonical link: https://commits.webkit.org/80968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91801 268f45cc-cd09-0410-ab3c-d52691b4dbfc